--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   font-size: large;
 }
 
+h1 {
+  color: #fffffff0;
+  font-weight: normal;
+  font-size: 50px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
