--- a/src/components/dialog-section.css
+++ b/src/components/dialog-section.css
@@ -2,3 +2,17 @@
 	margin: 30px 0 0 30px;
 	width: 65%;
 }
+
+input {
+	margin-right: 10px;
+}
+
+form ul {
+	border: 1px solid grey;
+	border-radius: 5px;
+}
+
+li {
+	list-style: none;
+	margin: 10px 0;
+}
