--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 body {
-  color: #fffffff0;;
+	color: #fffffff0;
 }
 
 header {
-  text-align: center;
+	text-align: center;
 }
 
 h1 {
-  font-weight: normal;
-  font-size: 70px;
+	font-weight: normal;
+	font-size: 70px;
 }
