--- a/src/components/dialog-section.css
+++ b/src/components/dialog-section.css
@@ -16,3 +16,10 @@ li {
 	list-style: none;
 	margin: 10px 0;
 }
+
+@media (max-width: 1250px) {
+	.dialog-section {
+		margin: 0 auto;
+		width: 90%;
+	}
+}
