--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,15 @@ h1 {
 	font-weight: normal;
 	font-size: 70px;
 }
+
+@media (max-width: 600px) {
+	h1 {
+		font-size: 45px;
+		margin: 40px auto;
+	}
+	button {
+		height: 25px;
+		width: 90px;
+		font-size: 12px;
+	}
+}
