--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -43,8 +43,8 @@ button {
 
 button:hover,
 button:active {
-	letter-spacing: 1.3px;
-	background-color: #e6e6e6f0;
+	letter-spacing: 1.1px;
+	background-color: #f5f5f5;
 	color: black;
 	cursor: pointer;
 }
