--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+html {
+    margin: 0;
+    height: 100%;
+    position: relative;
+}
+
 body {
 	color: #fffffff0;
+	background-color: #252525;
 }
 
 header {
@@ -9,6 +16,8 @@ header {
 h1 {
 	font-weight: normal;
 	font-size: 70px;
+	opacity: 0;
+	animation: fadeIn 1.5s ease-in both;
 }
 
 @media (max-width: 600px) {
@@ -20,5 +29,16 @@ h1 {
 		height: 25px;
 		width: 90px;
 		font-size: 11px;
+	}
+}
+
+@keyframes fadeIn {
+ 0% {
+		opacity: 0;
+		transform: translate3d(0, -20%, 0);
+	}
+	100% {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
 	}
 }
