--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -14,6 +14,13 @@ button {
 	transition-timing-function: ease;
 }
 
+.opening-quote {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .confirm-name-button {
 	font-size: 13px;
 	width: 63px;
